# local-rag

./: README.md  config.py  data.txt  embedding.py  embeddings.py  llm.py  main.py  pickle_dup.pkl  pyproject.toml  retrieval.py  retrival.py
.claude/: settings.json
